[package]
name = "rs_ctx"
version = "0.1.1"
edition = "2021"
description = "Context propagation for rs framework"
license = "Apache-2.0"
authors = ["Jaxon Sparrow <jaxonsparrow1912@gmail.com>"]
repository = "https://github.com/JaxonSparrow/rs_ctx"
documentation = "https://docs.rs/rs_ctx"
readme = "README.md"
keywords = ["async", "context", "tokio", "jaxon"]
categories = ["asynchronous", "development-tools"]

[lib]
name = "rs_ctx"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.39.0", features = ["full", "sync", "time"] }
futures = "0.3"
thiserror = "2.0.11"
anyhow = "1.0.95"
chrono = "0.4.39"
tracing = "0.1.39"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
[dev-dependencies]
tokio-test = "0.4"
[package.metadata.docs.rs]
name = "rs_ctx"